# codesense-ai

./: .env.example  .gitignore  Legal_Entity_Search_BRD (1).docx  Makefile  README.md  backend_impl.md  docker-compose.dev.yml  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  User_Authentication_BRD_v2.md  User_Authentication_BRD_v3.md  docker-compose.yml  pyproject.toml  test_brd_with_mcp.py  test_copilot_sdk_skills.py  test_custom_tools.py  test_e2e_multi_agent.py  test_mcp.py  test_sdk_auto_execution.py  test_skills_integration.py  user_authentication_brd.md
backend/.github/skills/: create-jira-issues.md  generate-backlogs-from-epics.md  generate-brd.md  generate-epics-from-brd.md  plan-task.md  reflect.md
backend/.github/skills/generate-brd/: SKILL.md
backend/docker/: mcp-config.docker.json
backend/examples/: api_curl_examples.sh  api_feature_request.json  api_usage_example.py  custom_template_example.py  four_phase_flow_example.py  minimal_request.json  sample_request.json
backend/scripts/: health_check.py  run_example.py  setup_neo4j.py
backend/src/brd_generator/: __init__.py  main.py
backend/src/brd_generator/agents/: __init__.py  backlog_generator_agent.py  backlog_verifier_agent.py  base.py  brd_generator_agent.py  brd_refinement_agent.py  brd_verifier_agent.py  epic_generator_agent.py  epic_verifier_agent.py
backend/src/brd_generator/api/: __init__.py  analysis_callback_routes.py  app.py  blueprint_routes.py  chat_models.py  chat_routes.py  context_routes.py  flow_routes.py  jobs_routes.py  models.py  repository_routes.py  routes.py  wiki_routes.py
backend/src/brd_generator/config/: __init__.py  models.py
backend/src/brd_generator/core/: __init__.py  aggregator.py  brd_best_practices.py  brd_epic_analyzer.py  enhanced_context.py  epic_template_parser.py  feature_flow.py  generator.py  multi_agent_orchestrator.py  skill_loader.py  synthesizer.py  template_parser.py  tool_registry.py
backend/src/brd_generator/database/: __init__.py  config.py  models.py
backend/src/brd_generator/enrichment/: __init__.py  documentation_generator.py  enrichment_service.py  test_generator.py
backend/src/brd_generator/mcp_clients/: __init__.py  base.py  filesystem_client.py  neo4j_client.py
backend/src/brd_generator/models/: __init__.py  brd.py  business_logic.py  context.py  epic.py  flow_context.py  output.py  repository.py  request.py  verification.py
backend/src/brd_generator/prompts/: analysis-prompt.txt  synthesis-prompt.txt  system-message.txt
backend/src/brd_generator/queries/: blueprint_queries.py  flow_queries.py
backend/src/brd_generator/services/: __init__.py  audit_service.py  blueprint_service.py  code_assistant_service.py  document_service.py  git_client.py  mcp_configurator.py  platform_client.py  repository_service.py  task_manager.py  wiki_service.py
backend/src/brd_generator/skills/: __init__.py  generate-brd.yaml  generate-epics.yaml  generate-stories.yaml  verify-brd.yaml
backend/src/brd_generator/tasks/: __init__.py  cleanup_task.py
backend/src/brd_generator/templates/: README.md  backlog-template.md  brd-template.md  epic-template.md
backend/src/brd_generator/utils/: __init__.py  logger.py  token_counter.py
backend/tests/: __init__.py  conftest.py  test_aggregator.py  test_generator.py  test_mcp_clients.py  test_multi_agent.py  test_synthesizer.py
codegraph/: .dockerignore  .env.example  Dockerfile  env.sh  package-lock.json  package.json  python_parser.py  repomix-output.md  run_neo4j_server.sh  tsconfig.json
codegraph/src/: index.ts
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  (+3 more)
skills_definitions/: acceptance-criteria.yaml  architecture-mapper.yaml  backlog-generator.yaml  brd-generator.yaml  codebase-analyzer.yaml  epic-generator.yaml  senior-engineer-analysis.yaml  verification.yaml
src/: main.py
tests/: conftest.py
(+198 files in other folders)
