[tool.poetry]
name = "brd-generator"
version = "0.1.0"
description = "AI-powered BRD generation using Neo4j and Copilot SDK"
authors = ["CodeSense AI Team"]
readme = "README.md"
packages = [{include = "brd_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
github-copilot-sdk = "^0.1.13"
neo4j = "^5.14.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
rich = "^13.7.0"
httpx = "^0.26.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
# PostgreSQL support
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"

[tool.poetry.scripts]
brd-generator = "brd_generator.main:main"
brd-api = "brd_generator.api.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
